# UFOs

./: .gitignore  CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md  test.c  testing_notes.md
R/: maskirovka.R  ufos.R
badstrings/: CMakeLists.txt  DESCRIPTION  NAMESPACE
badstrings/R/: badstrings.R
badstrings/cmake/: FindR.cmake
badstrings/src/: init.c
man/: hello.Rd
matrixbench/: CMakeLists.txt  DESCRIPTION
src/: bin_file_source.c  bin_file_source.h  init.c  maskirovka.c  maskirovka.h  maskirovka_altrep.c  maskirovka_altrep.h  notes  ufo_sources.h  ufos.c  ufos.h  ufos_altrep.c  ufos_altrep.h  userfaultCore_dummy.c  userfaultCore_wip.h
src/includes/: sources.h
src/mappedMemory/: bTree.c  bTree.h  sparseList.c  sparseList.h  sparseListTest.c  stride.c  ufoTest.c  userFaultCoreInternal.h  userfaultCore.c  userfaultCore.h  userfaultSpeed.c
src/sources/: bin_file_source.c  bin_file_source.h
src/unstdLib/: errors.h  vars.h
ufoaltrep/: CMakeLists.txt  DESCRIPTION  NAMESPACE  README.md
ufoaltrep/R/: ufoaltrep.R
ufoaltrep/src/: R_ext.c  R_ext.h  altrep_cached_ufo_vectors.c  altrep_cached_ufo_vectors.h  altrep_seq.c  altrep_seq.h  altrep_ufo_files.c  altrep_ufo_files.h  altrep_ufo_vectors.c  altrep_ufo_vectors.h  debug.c  debug.h  file_manipulation.c  file_manipulation.h  helpers.c  helpers.h  init.c  metadata.h  ring_buffer.c  ring_buffer.h
ufomatrices/: DESCRIPTION  NAMESPACE  README.md
ufomatrices/R/: ufovectors.R
ufomatrices/include/mappedMemory/: userfaultCore.h
ufomatrices/src/: init.c  ufo_matrix.c  ufo_matrix.h
ufomatrices/vignettes/: delayedarray.Rmd  matrices.Rmd  vectors.Rmd
ufos/: CMakeLists.txt  DESCRIPTION  Makefile  NAMESPACE  README.md  test_w.c
ufos/R/: ufos.R
ufos/cmake/: FindR.cmake
ufos/examples/: test.R
ufos/rust/: .gitignore  Makefile
ufos/rust/ufos/: Cargo.toml
ufos/rust/ufos/src/: lib.rs
ufos/rust/ufos_c/: CMakeLists.txt  Cargo.toml  Makefile  build.rs
ufos/rust/ufos_c/src/: lib.rs
ufos/rust/ufos_core/: Cargo.toml
ufos/rust/ufos_core/src/: bitwise_spinlock.rs  c_level.rs  errors.rs  lib.rs  math.rs  mmap_wrapers.rs  once_await.rs  populate_workers.rs  return_checks.rs  ufo_core.rs  ufo_objects.rs
ufos/src/: .gitignore  Makevars  R_ext.c  bTree.c  init.c  math.h  ufo_sources.h  ufos.c  ufos.h  userFaultCoreInternal.h  userfaultCore.c  userfaultCore.h  userfaultCoreInternal.h  userfaultGettersSetters.c  vars.h
ufos/src/mappedMemory/: Makefile  bTree.c  oroboros.c  oroboros.h  oroborosTest.c  sparseList.c  sparseListTest.c  ufoSpeedTest.c  ufoTest.c  userFaultCoreInternal.h  userfaultCore.c  userfaultCore.h  userfaultGettersSetters.c  userfaultSpeed.c
ufos/src/mappedMemory/blake3/: .gitignore  Makefile
ufos/src/rust/ufos/src/: lib.rs
ufos/src/rust/ufos_c/: Cargo.toml  build.rs
ufos/src/rust/ufos_c/src/: lib.rs
ufos/src/rust/ufos_core/src/: populate_workers.rs
ufos/src/testing/: sparseListTest.c
ufos/src/unstdLib/: errors.h
ufos/testing/: sparseListTest.c  strideTest.c  ufoTest.c
ufos/vignettes/: internals.Rmd  programming-guide.Rmd
ufos_rust/: .gitignore  Cargo.toml
ufos_rust/src/: lib.rs  mmap_wrapers.rs  return_checks.rs  ufo_core.rs  ufo_instance.rs  ufo_objects.rs
ufoseq/: CMakeLists.txt  DESCRIPTION  NAMESPACE
ufoseq/R/: ufoseq.R
ufoseq/include/: ufos.h
ufoseq/include/mappedMemory/: userfaultCore.h
ufoseq/src/: init.c  ufoseq.c  ufoseq.h
ufovectors/: CMakeLists.txt  DESCRIPTION  Makevars  NAMESPACE  README.md
ufovectors/..Rcheck/tests/testthat/: test-chunking.R  test-file-backed-sum.R  test-operators.R  test-subscripting.R  test-subsetting.R
ufovectors/..Rcheck/ufovectors/: DESCRIPTION  NAMESPACE
ufovectors/R/: operators.R  ufovectors.R
ufovectors/benchmark/: benchmark.Rmd  create_binary_files.sh  matrix.R
ufovectors/data/: gen.c  gen.sh  generate_examples.sh
ufovectors/include/: ufos.h  ufos_c.h
ufovectors/src/: Makevars  debug.c  debug.h  helpers.c  helpers.h  init.c  make_sure.h  rash.c  rash.h  rrr.c  rrr.h  safer.h  safety_first.h  ufo_coerce.c  ufo_coerce.h  ufo_csv.c  ufo_csv.h  ufo_csv_manipulation.c  ufo_csv_manipulation.h  ufo_empty.c  ufo_empty.h  ufo_file_manipulation.c  ufo_file_manipulation.h  ufo_metadata.h  ufo_operators.c  ufo_operators.h  ufo_seq.c  ufo_seq.h  ufo_vectors.c  ufo_vectors.h
ufovectors/src/csv/: reader.c  reader.h  string_set.c  string_set.h  string_vector.c  string_vector.h  token.c  token.h  tokenizer.c  tokenizer.h
ufovectors/src/evil/: arithmetic.c  arithmetic.h  bad_strings.c  bad_strings.h
ufovectors/src/include/: ufos.h
ufovectors/tests/: testthat.R
ufovectors/tests/csv/: test.c  test.csv
ufovectors/tests/testthat/: test-assign.R  test-empty-vectors.R  test-file-backed-add-1.R  test-file-backed-sum.R  test-operators.R  test-subscripting.R  test-subsetting.R
ufovectors/vignettes/: matrices.Rmd  vectors.Rmd
viewports/: CMakeLists.txt  DESCRIPTION  NAMESPACE
viewports/R/: slices.R  viewports.R
viewports/src/: bitmap_sexp.c  bitmap_sexp.h  common.c  common.h  debug.c  debug.h  init.c  mosaics.c  mosaics.h  prisms.c  prisms.h  slices.c  slices.h  viewports.c  viewports.h
